# kenny

./: .gitignore  BENCH.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/agents/: kenny-docs-auditor.md  kenny-format-auditor.md
.github/workflows/: ci.yml
docs/: MANIFESTO.md
docs/ADR/: 0001-adr-process.md  0002-expert-level-sharding-of-moe-models.md  0003-star-topology-and-role-split.md  0004-stateless-experts-stateful-spine.md  0005-content-addressed-expert-blobs.md  0006-target-workload-async-agent-farms.md  0007-model-targets-glm52-and-qwen3-30b.md  0008-graceful-degradation-renorm-and-canaries.md  0009-replication-and-heat-driven-placement.md  0010-tail-latency-hedging-and-layer-timeouts.md  0011-wire-codec-trait-canonical-bytes.md  0012-carve-time-central-quantization.md  0013-cpu-nodes-first-class.md  0014-per-client-fairness-in-batch-scheduler.md  0015-trusted-pool-verification-deferred.md  0016-network-stack-sync-first.md  0017-json-and-serde-policy.md  0018-wire-numeric-path-fp8-vs-int8.md  0019-crate-layout-single-until-it-hurts.md  0020-spine-compute-hook-existing-runtime.md  0021-dependency-policy.md  0022-kv-and-prefix-cache.md  0023-batching-composes-on-the-wire.md  0024-placement-composes-on-the-wire.md  (+1 more)
src/: bf16.rs  blob.rs  canary.rs  carve.rs  cli.rs  diff.rs  error.rs  expert.rs  fixture.rs  fp8.rs  json.rs  lib.rs  main.rs  manifest.rs  natsort.rs  node.rs  placement.rs  prefix.rs  quant.rs  rng.rs  safetensors.rs  spine.rs  verify.rs  wire.rs
tests/: dispatch.rs  roundtrip.rs
tools/: check-adr.sh  check-agents.sh  netem-bench.sh
(+1 files in other folders)
